--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="version" content="${VERSION}">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'unsafe-eval' 'self'; object-src 'none'; img-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; frame-src https://*.westpac.com.au; connect-src https://*.soulmachines.cloud wss://*.soulmachines.cloud https://localhost:* 'self'">
 
     <title>Wendy</title>
 
